--- a/src/design/appbar.css
+++ b/src/design/appbar.css
@@ -1,17 +1,21 @@
+
 * {
    margin: 0;
    padding: 0;
+   font-family: sans-serif;
+   font-size: 15px;
+   
 }
 .appbar {
    color: white;
-   height: 100px;
    width: 100vw;
    background-color: transparent;
    display: flex;
    flex-direction: column;
+  
 }
 .appBarTop {
-   height: 60px;
+   height: 70px;
    width: 100vw;
    background-color: #121921;
    position: absolute;
@@ -30,11 +34,20 @@
    height: 30px;
    padding: 10px;
 }
+#logo {
+   margin: 7px 9px 0px 10px;
+   width: 105px;
+   height: 32px;
+}
 #login {
    min-width: 130px;
 }
+#carrinho {
+   margin-right: 10px;
+}
 #carrinhoIcon {
-   font-size: 30px;
+   font-size: 25px;
+
 }
 
 #sem {
@@ -53,9 +66,22 @@
 #enviar {
    min-width: 80px;
 }
+
+.produtos {
+   margin-top: 5px;
+   border: none;
+   background-color: #f3f2f3;
+   border-right: 1px solid #d6d6d6;
+   border-top-left-radius: 5px;
+   border-bottom-left-radius: 5px;
+   height: 45px;
+   width: 72px;
+   padding: 15px 0px 15px 10px;
+   font-size: 13px;
+}
 .inputt {
    padding: 0;
-   margin: 0;
+   margin-top: 5px;
    width: 100%;
    height: 45px;
    border: none;
@@ -63,18 +89,25 @@
 }
 
 .icon {
+   margin-top: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
-   width: 50px;
+   width: 60px;
    height: 45px;
    background-color: #febd69;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+#lupa {
+   width: 35px;
 }
 .appBarBottom {
    justify-content: space-between;
    position: absolute;
-   margin-top: 60px;
+   margin-top: 65px;
    width: 100vw;
-   height: 40px;
+   height: 45px;
    background-color: #232f3f;
    display: flex;
    flex-direction: row;
@@ -87,7 +120,9 @@
    flex-direction: row;
    justify-content: center;
 }
-
+#barraTodos {
+   font-size: 35px;
+}
 .appBarBottom1{
    border-radius: 5px;
    align-items: center;
@@ -102,4 +137,178 @@
 
 .appBarBottom1:hover {
    border: 1px solid white;
+}
+
+.barraLateral {
+   position: fixed;
+   margin-top: -100px;
+   width: 450px;
+   height: 100vh;
+   background-color: khaki;
+   display: flex;
+   flex-direction: column;
+}
+.principal {
+   overflow:auto; 
+   background-color: blue;
+   height: 100%;
+   width: 450px;
+   display: flex;
+   flex-direction: column;
+}
+.barraAzul {
+   display: flex;
+   flex-direction: row;
+   width: 100%;
+   height: 80px;
+   background-color: #232f3f;
+}
+#userLogo {
+   padding-bottom: 15px;
+   margin-top: 15px;
+   margin-left: 40px;
+   width: 30px;
+   height: 30px;
+}
+#UserLogin {
+   margin-top: 20px;
+   margin-left: 10px;
+   font-size: 21px;
+   color: white;
+   font-weight: 700;
+}
+.Titulo {
+ margin: 20px 0px 9px 40px;
+ font-size: 20px;  
+}
+.dentroP {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding-left: 40px;
+   height: 50px;
+   width: 410px;
+   margin-right: 100px;
+   font-size: 15px;
+   color: grey;
+}
+.dentroP:hover {
+   background-color: rgba(213, 213, 214, 0.466);
+}
+#flecha {
+   margin-right: 30px;
+   width: 15px;
+   height: 15px;
+}
+#conteudo {
+   width: 450px;
+   height: 200px;
+   background-color: white;
+   border-bottom: 1px solid #e1e2e3;
+}
+#comprar {
+   width: 450px;
+   background-color: white;
+   
+   border-bottom: 1px solid #e1e2e3;
+   border-top: 1px solid #e1e2e3;
+
+}
+#programas {
+   width: 450px;
+   background-color: white;
+   
+   border-bottom: 1px solid #e1e2e3;
+   border-top: 1px solid #e1e2e3;
+
+}
+#ajuda {
+   width: 450px;
+   background-color: white;
+         
+      border-bottom: 1px solid #e1e2e3;
+      border-top: 1px solid #e1e2e3;
+
+}
+.fecha {
+   font-size: 40px;
+   color: white;
+   position: absolute;
+   margin-top: 10px;
+   margin-left: 460px;
+   width: 50px;
+   height: 50px;
+   background-color: transparent;
+}
+.caixaLogin {
+   border-radius: 5px;
+   border: 1px solid grey;
+   margin-left: 750px;
+   margin-top: -44px;
+   position: absolute;
+   width: 530px;
+   height: 430px;
+   background-color: white;
+   display: flex;
+   flex-direction: column;
+}
+.login {
+   height: 80px;
+   background-color: white;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+.buttonLogin {
+   border: 1px solid grey;
+   border-radius: 5px;
+   height: 37px;
+   width: 230px;
+   background-image: linear-gradient(to bottom, #f9ecc9,#f6e0a6,#f6dd9d,#f3d381,#f1c962,#f0c351);
+}
+.pButton {
+   margin-top: 10px;
+   font-size: 12px;
+}
+.aButton {
+   margin-top: 10px;
+   color: blue;
+   font-size: 12px;
+}
+.barraLogin {
+   margin-left: 25px;
+   width: 90%;
+   background-color: rgba(170, 167, 167, 0.555);
+   border: none;
+   height: 1px;
+}
+.listas {
+   display: flex;
+   flex-direction: row;
+}
+.suasListas {
+   width: 50%;
+   height: 350px;
+   background-color: white;
+}
+.barraLoginDois {
+   margin-top: 10px;
+   height: 330px;
+   background-color: rgba(170, 167, 167, 0.555);
+   border: none;
+   width: 1px;
+}
+.suaConta {
+   width: 50%;
+   height: 350px;
+   background-color: white;
+}
+.TituloCaixaLogin {
+   font-weight: 700;
+   font-size: 20px;
+   margin: 10px 0px 10px 20px;
+}
+.paragCaixaLogin {
+   margin: 0px 0px 10px 20px;
 }
