--- a/src/design/appbar.css
+++ b/src/design/appbar.css
@@ -8,7 +8,7 @@
 }
 .appbar {
    color: white;
-   width: 100vw;
+   width: 99vw;
    background-color: transparent;
    display: flex;
    flex-direction: column;
@@ -16,11 +16,12 @@
 }
 .appBarTop {
    height: 70px;
-   width: 100vw;
+   width: 99vw;
    background-color: #121921;
    position: absolute;
    display: flex;
    flex-direction: row;
+
 }
 .appBarTop1 {
    margin: 15px 0px 15px 0px;
@@ -106,7 +107,7 @@
    justify-content: space-between;
    position: absolute;
    margin-top: 65px;
-   width: 100vw;
+   width: 99vw;
    height: 45px;
    background-color: #232f3f;
    display: flex;
@@ -140,8 +141,8 @@
 }
 
 .barraLateral {
+   z-index: 999;
    position: fixed;
-   margin-top: -100px;
    width: 450px;
    height: 100vh;
    background-color: khaki;
@@ -194,6 +195,7 @@
 }
 .dentroP:hover {
    background-color: rgba(213, 213, 214, 0.466);
+
 }
 #flecha {
    margin-right: 30px;
@@ -244,13 +246,14 @@
    border-radius: 5px;
    border: 1px solid grey;
    margin-left: 750px;
-   margin-top: -44px;
    position: absolute;
+   margin-top: 65px;
    width: 530px;
    height: 430px;
    background-color: white;
    display: flex;
    flex-direction: column;
+   z-index: 999;
 }
 .login {
    height: 80px;
